// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component | AppHeader.vue template should match snapshot 1`] = `
<header class="header">
  <div class="container"><a title="Home page" href="/" class="logo"><img alt="Logo" width="38" height="38" src="../../static/velo.png" class="icon"> <span class="recontact">Recontact</span> <span class="me">Me</span></a>
    <!---->
    <nav aria-label="navigation">
      <nav-control-stub></nav-control-stub>
    </nav>
  </div>
</header>
`;

exports[`Component | AppHeader.vue template should match snapshot on article page 1`] = `
<header class="header">
  <div class="container"><a title="Home page" href="/" class="logo"><img alt="Logo" width="38" height="38" src="../../static/velo.png" class="icon"> <span class="recontact">Recontact</span> <span class="me">Me</span></a>
    <nav aria-label="navigation">
      <ul class="navigation">
        <li class="previous article">
          <app-button-stub text="<" to="/articles/7" tag="nuxt-link" class="button previous article"></app-button-stub>
        </li>
        <li class="article-text">
          <p class="id">
            Article 8
          </p>
        </li>
        <li class="next article">
          <app-button-stub text=">" to="/articles/9" tag="nuxt-link" class="button next article"></app-button-stub>
        </li>
      </ul>
    </nav>
    <nav aria-label="navigation">
      <nav-control-stub></nav-control-stub>
    </nav>
  </div>
</header>
`;
